[gd_scene load_steps=3 format=3 uid="uid://uxewla0dvycr"]

[ext_resource type="Script" uid="uid://c8witcbp7il85" path="res://scenes/ui/ProductionScreen.gd" id="1"]
[ext_resource type="Theme" path="res://resources/themes/main_theme.tres" id="2"]

[node name="ProductionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.08, 0.12, 1)

[node name="BuildingTabs" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -250.0
offset_right = 320.0
offset_bottom = 250.0
grow_vertical = 2
current_tab = 0

[node name="Farm" type="VBoxContainer" parent="BuildingTabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Label" type="Label" parent="BuildingTabs/Farm"]
layout_mode = 2
text = "üåæ √áiftlik"
horizontal_alignment = 1

[node name="Mine" type="VBoxContainer" parent="BuildingTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="BuildingTabs/Mine"]
layout_mode = 2
text = "‚õèÔ∏è Maden"
horizontal_alignment = 1

[node name="Workshop" type="VBoxContainer" parent="BuildingTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Label" type="Label" parent="BuildingTabs/Workshop"]
layout_mode = 2
text = "üî® At√∂lye"
horizontal_alignment = 1

[node name="AlchemyLab" type="VBoxContainer" parent="BuildingTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Label" type="Label" parent="BuildingTabs/AlchemyLab"]
layout_mode = 2
text = "‚öóÔ∏è Simya Lab"
horizontal_alignment = 1

[node name="EnchantingTower" type="VBoxContainer" parent="BuildingTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="Label" type="Label" parent="BuildingTabs/EnchantingTower"]
layout_mode = 2
text = "‚ú® B√ºy√º Kulesi"
horizontal_alignment = 1

[node name="BuildingInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
text = "Building Info"
horizontal_alignment = 1

[node name="ProductionQueue" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="ProductionQueue"]
layout_mode = 2
text = "√úretim Kuyruƒüu"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ProductionQueue"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ProductionQueue/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -80.0
offset_right = 250.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartProductionButton" type="Button" parent="ButtonPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚ñ∂Ô∏è √úretim Ba≈ülat"

[node name="CollectButton" type="Button" parent="ButtonPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "üì¶ Topla"

[node name="UpgradeButton" type="Button" parent="ButtonPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚¨ÜÔ∏è Y√ºkselt"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "‚óÄ Geri"
